--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ These are the contibutors
 Jose Alvarez de Lugo <845@holbertonschool.com>
 William Dyrland-Marquis <818@holbertonschool.com>
 Christian Williams <712@holbertonschool.com>
+Osama Basheer <838@holbertonschool.com>
