add myself to author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,4 @@ Jose Alvarez de Lugo <845@holbertonschool.com>
 William Dyrland-Marquis <818@holbertonschool.com>
 Christian Williams <712@holbertonschool.com>
 Osama Basheer <838@holbertonschool.com>
+Andrew Graf <824@holbertonschoo.com>
