--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,5 @@ William Dyrland-Marquis <818@holbertonschool.com>
 Christian Williams <712@holbertonschool.com>
 Osama Basheer <838@holbertonschool.com>
 Andrew Graf <824@holbertonschoo.com>
+Carter Clements <carter.clements@holbertonschool.com>
+Gareth Brickman <gareth.brickman@holbertonschool.com>
