Adding name to AUTHORS file.

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Osama Basheer <838@holbertonschool.com>
 Andrew Graf <824@holbertonschoo.com>
 Carter Clements <carter.clements@holbertonschool.com>
 Gareth Brickman <gareth.brickman@holbertonschool.com>
+Faizan Khan <711@holbertonschool.com>
