--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,4 @@ Andrew Graf <824@holbertonschoo.com>
 Carter Clements <carter.clements@holbertonschool.com>
 Gareth Brickman <gareth.brickman@holbertonschool.com>
 Faizan Khan <711@holbertonschool.com>
+Hiram C Velez <825@holbertonshool.com>
