--- a/AUTHORS
+++ b/AUTHORS
@@ -8,4 +8,10 @@ Andrew Graf <824@holbertonschoo.com>
 Carter Clements <carter.clements@holbertonschool.com>
 Gareth Brickman <gareth.brickman@holbertonschool.com>
 Faizan Khan <711@holbertonschool.com>
-Hiram C Velez <825@holbertonshool.com>
+Ben Quinones Burgos <825@holbertonschool.com>
+Mitchell Moscovics <819@holbertonschool.com>
+Hiram Velez <852@holbertonschool.com>
+John Knight <983@holbertonschool.com>
+Brandyn Reindel <840@holbertonschool.com>
+Nathaniel Marofsky <821@holbertonschool.com>
+Anthony Huggins <830@holbertonschool.com>
