--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,5 @@ John Knight <983@holbertonschool.com>
 Brandyn Reindel <840@holbertonschool.com>
 Nathaniel Marofsky <821@holbertonschool.com>
 Anthony Huggins <830@holbertonschool.com>
+Diego Tardio <725@holbertonschool.com>
+Jonathan Patterson <706@holbertonschool.com>
